config/yaml/eventfinder-node-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: eventfinder-node
  name: eventfinder-node
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: eventfinder-node
    spec:
      containers:
      - command:
        - python
        - app.py
        - run
        image: gcr.io/eventfinder-239405/eventfinder-app:latest
        imagePullPolicy: "Always"
        name: eventfinder-container
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - mountPath: /etc/ssl-cert
          name: ssl-cert
        - mountPath: /etc/ssl-key
          name: ssl-key
      restartPolicy: Always
      volumes:
      - name: ssl-cert
        secret:
          secretName: ssl-cert
      - name: ssl-key
        secret:
          secretName: ssl-key
status: {}
